--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,13 +5,19 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/jquery-ui.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   <body>
-    <div id="app"></div>
-
+    <div class="container">
+       <div class="row" id="board-1"></div>
+       <div class="row" id="buttons-div"></div>
+    </div>
     <!-- ATTENTION \/ -->
     <script src="js/jquery-1.11.2.min.js"></script>
     <link rel="stylesheet" href="css/jquery-ui.min.css">
     <script src="js/jquery-ui.min.js"></script>
     <!-- ATTENTION /\ -->
+    <!-- Bootstrap -->
+    <!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Bootstrap -->
 
     <script src="js/compiled/reagent_chess_board.js"></script>
     <script>reagent_chess_board.core.main();</script>
