added pair-to-string to chess-utils.core

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,6 +4,7 @@
     <title>Reagent Chess Board</title>
     <link rel="stylesheet" type="text/css" media="screen" href="css/jquery-ui.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+  </head>
   <body>
     <div class="container">
        <div class="row" id="board-1"></div>
@@ -11,7 +12,6 @@
     </div>
     <!-- ATTENTION \/ -->
     <script src="js/jquery-1.11.2.min.js"></script>
-    <link rel="stylesheet" href="css/jquery-ui.min.css">
     <script src="js/jquery-ui.min.js"></script>
     <!-- ATTENTION /\ -->
     <!-- Bootstrap -->
